--- a/src/components/SliderWrapper/SliderWrapper.module.scss
+++ b/src/components/SliderWrapper/SliderWrapper.module.scss
@@ -1,4 +1,14 @@
 .SliderWrapper{
-    margin-top: -100px;
+    margin-top: -60px;
     position: relative;
+    @media (min-width:600px){
+        &{
+            margin-top: -100px;
+        }
+    }
+    @media screen and (max-height:455px){
+        &{
+            margin-top: -30px;
+        }
+    }
 }
